# STRR

./: .gitignore  .sonarcloud.properties  Makefile  README.md  docker-compose.yml  pnpm-workspace.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: e2e-host-pm.yml  e2e.yml  str-api-ci.yml  str-ui-ci.yml  str-ui-main-cd.yml  strr-api-cd.yaml  strr-api-ci.yaml  strr-application-auto-approval-job-cd.yaml  strr-application-auto-approval-job-ci.yaml  strr-auto-approval-job-cd.yaml  strr-auto-approval-job-ci.yaml  strr-backfiller-ci.yaml  strr-base-web-ci.yaml  strr-batch-validator-job-cd.yaml  strr-batch-validator-job-ci.yaml  strr-batch-validator-listener-cd.yaml  strr-batch-validator-listener-ci.yaml  strr-email-ci.yaml  strr-examiner-ui-cd.yaml  strr-examiner-ui-ci.yaml  strr-host-pm-ui-cd.yaml  strr-host-pm-ui-ci.yaml  strr-pay-cd.yaml  (+14 more)
jobs/auto-approval/: .env.sample  Makefile  pyproject.toml
jobs/auto-approval/devops/: vaults.gcp.env
jobs/auto-approval/devops/gcp/: clouddeploy.yaml
jobs/auto-approval/src/auto_approval/: config.py  job.py
jobs/auto-approval/src/auto_approval/tests/: test_job.py
jobs/auto-approval/src/auto_approval/utils/: __init__.py
jobs/auto-approval/tests/: conftest.py
jobs/auto-approval/tests/integration/: test_get_submitted_applications.py
jobs/auto-approval/tests/unit/: test_config.py  test_config_cloudsql_iam.py  test_job.py
jobs/interactions-update/: .env.sample  Dockerfile  Makefile  README.md  pyproject.toml
jobs/interactions-update/devops/: vaults.gcp.env
jobs/interactions-update/src/interactions_update/: __main__.py  database.py  job.py
jobs/interactions-update/src/interactions_update/clients/: __init__.py  notify_api.py
jobs/interactions-update/src/interactions_update/config/: __init__.py  retry.py
jobs/interactions-update/src/interactions_update/handlers/: __init__.py  interaction_status.py  notify_references.py
jobs/interactions-update/src/interactions_update/services/: __init__.py  auth.py  interaction_processor.py
jobs/interactions-update/tests/: conftest.py
jobs/interactions-update/tests/integration/: test_interactions_update_job.py
jobs/interactions-update/tests/load/: conftest.py  test_benchmarks.py  test_run.py
jobs/interactions-update/tests/load/handlers/: __init__.py  test_interaction_status.py
jobs/interactions-update/tests/load/services/: __init__.py  test_interaction_processor.py
jobs/interactions-update/tests/unit/: test_database.py  test_database_cloud.py  test_gcp_iam_vaults.py
jobs/interactions-update/tests/unit/clients/: __init__.py  test_notify_api.py
jobs/interactions-update/tests/unit/config/: __init__.py  test_retry.py
jobs/interactions-update/tests/unit/handlers/: __init__.py
jobs/interactions-update/tests/unit/services/: __init__.py
jobs/noc_expiry/: pyproject.toml
jobs/noc_expiry/devops/gcp/: clouddeploy.yaml
jobs/noc_expiry/src/noc_expiry/: config.py  job.py
jobs/noc_expiry/tests/: conftest.py
jobs/noc_expiry/tests/integration/: test_noc_expiry_job.py
jobs/noc_expiry/tests/unit/: test_config.py  test_job.py  test_validate_test_utils.py
jobs/renewal-reminders/: Makefile  pyproject.toml
jobs/renewal-reminders/devops/: vaults.gcp.env
jobs/renewal-reminders/src/renewal_reminders/: config.py
jobs/renewal-reminders/tests/: conftest.py
jobs/renewal-reminders/tests/load/: conftest.py
jobs/renewal-reminders/tests/unit/: test_app.py  test_job.py
jobs/strr-backfiller/: Dockerfile  pyproject.toml
jobs/strr-backfiller/devops/: vaults.gcp.env
jobs/strr-backfiller/src/backfiller/: config.py  job.py
jobs/strr-backfiller/tests/: conftest.py
jobs/strr-backfiller/tests/fixtures/: local.py  registration_factories.py
jobs/strr-backfiller/tests/integration/: test_registration_search_backfill.py
jobs/strr-backfiller/tests/unit/: test_config.py  test_job.py  test_utils_convert.py
queue_services/batch-permit-validator/: Dockerfile  Makefile  README.md  pyproject.toml
queue_services/batch-permit-validator/devops/: vault.gcp.env
queue_services/batch-permit-validator/devops/gcp/: clouddeploy.yaml
queue_services/batch-permit-validator/src/batch_permit_validator/: config.py
queue_services/batch-permit-validator/src/batch_permit_validator/resources/: batch_permit_validator.py
queue_services/batch-permit-validator/tests/: conftest.py
queue_services/batch-permit-validator/tests/integration/: test_listener_http.py
queue_services/batch-permit-validator/tests/unit/: test_app_factory.py  test_config.py  test_helpers.py  test_resources.py
queue_services/strr-pay/: .env.sample  .flake8  Makefile  pyproject.toml
queue_services/strr-pay/devops/: vaults.gcp.env
queue_services/strr-pay/devops/gcp/: clouddeploy.yaml
queue_services/strr-pay/src/strr_pay/: __init__.py  config.py
queue_services/strr-pay/src/strr_pay/resources/: pay_listener.py
queue_services/strr-pay/tests/: test_example.py
queue_services/strr-pay/tests/integration/: conftest.py  test_queue_payment.py
queue_services/strr-pay/tests/unit/: conftest.py  test_pay_listener_helpers.py  test_pay_listener_worker.py  test_resources_init.py  test_utils.py
rfcs/: rfc-caching.md
str-api/: .env.local  Makefile  README.md  pyproject.toml  wsgi.py
strr-api/: .env.sample  Dockerfile  Makefile  README.md  gunicorn_config.py  pyproject.toml
strr-base-web/: .eslintrc  .npmrc  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
strr-examiner-web/: .env.example  .eslintrc  .gitignore  .npmrc  CONTRIBUTING.md  Dockerfile  README.md  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts
strr-host-pm-web/: .env.example  CONTRIBUTING.md  Dockerfile  README.md  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml
strr-platform-web/: .env.example  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
strr-strata-web/: .env.example  README.md  firebase.json  nuxt.config.ts  package.json  pnpm-lock.yaml
strr-web/: Dockerfile  package.json
testing/: cypress.config.ts  package-lock.json  package.json
(+634 files in other folders)
