[project]
name = "interactions-update"
version = "0.2.0"
description = "updates the status of interactions from downstream services (currently only email)"
authors = [
    {name = "Thor", email = "thor@daxiom.com"}
]
license = {text = "BSD 3-Clause"}
requires-python = ">=3.12.2,<3.15"

# Leaving the local working api here as an example
dependencies = [
    "cloud-sql-python-connector[pg8000] (>=1.20.0,<2.0.0)",
    "google-auth (>=2.48.0,<3.0.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "strr-api @ git+https://github.com/bcgov/STRR.git@main#subdirectory=strr-api",
    "nanoid (>=2.0.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

# Poetry-specific configuration lives here
[tool.poetry]
packages = [{include = "interactions_update", from = "src"}]

[tool.poetry.group.dev.dependencies]
black = ">=26.1.0,<27.0.0"
isort = ">=8.0.0,<9.0.0"
flake8 = ">=7.3.0,<8.0.0"
strr-test-utils = { path = "../../tests/python-test-utils", develop = true }

[tool.poetry.group.test.dependencies]
pytest = ">=9.0.2,<10.0.0"
pytest-cov = ">=7.1.0"
pytest-mock = ">=3.15.1,<4.0.0"
pytest-benchmark = ">=5.2.3,<6.0.0"
responses = ">=0.26.0,<0.27.0"
testcontainers = ">=4.14.1,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "2.0"
testpaths = [
   "tests",
]
addopts = "--verbose --strict -p no:warnings --cov=src --cov-report html:htmlcov --cov-report xml:coverage.xml --cov-report term"
python_files = [
   "test*.py",
]
norecursedirs = [
   ".git", ".tox", "venv*", "requirements*", "build",
]
log_cli = true
log_cli_level = "1"
filterwarnings = [
   "ignore:autoincrement and existing_autoincrement only make sense for MySQL:UserWarning",
   "ignore::DeprecationWarning:testcontainers.*:",
   "ignore::DeprecationWarning:docker.*:",
   "ignore::ResourceWarning:testcontainers.*:",
]
markers = [
   "integration: tests requiring Docker DB and strr_test_utils fixtures",
   "conf: inject flask config values into the app fixture for one test",
   "load: heavy load or bulk scenarios (skip in fast CI via test-unit)",
   "benchmark: performance benchmarking tests",
   "slow",
   "serial",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "**/__main__.py",
    "**/interactions_update/__init__.py",
]

[tool.coverage.report]
fail_under = 80

[tool.isort]
profile = "black"
line_length = 120
force_single_line = true
known_first_party = ["interactions_update", "strr_api"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
