[tool.poetry]
name = "batch-permit-validator"
version = "0.0.1"
description = "BC Registries  - batch-permit-validatorr"
authors = []
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.4"
launchdarkly-server-sdk = "^9.0.1"
python-dotenv = "^1.0.1"
sentry-sdk = "^1.44.1"
flask-babel = "^4.0.0"
psycopg2 = "^2.9.9"
flask-jwt-oidc = "^0.9.0"
gunicorn = "^21.2.0"
flask-cors = "^4.0.0"
pg8000 = "^1.31.2"
protobuf = "^5.29.0"
isort = "^5.13.2"
pylint = "^3.0.3"
gcp-queue = { git = "https://github.com/bcgov/sbc-connect-common.git", subdirectory = "python/gcp-queue", branch = "main" }
structured-logging = { git = "https://github.com/bcgov/sbc-connect-common.git", subdirectory = "python/structured-logging", branch = "main" }
google-cloud-run = "^0.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^7.1.0"
pytest-mock = "^3.14.0"
black = "^24.4.2"
zimports = "^0.6.1"
isort = "^5.13.2"
strr-test-utils = {path = "../../tests/python-test-utils", develop = true}

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
)/
'''

[tool.isort]
profile = "google"
line_length = 100
known_first_party = ["batch_permit_validator"]

[tool.pytest.ini_options]
minversion = "2.0"
pythonpath = [
   "src",
]
testpaths = [
   "tests",
]
addopts = "--verbose --strict -p no:warnings --cov=src --cov-report html:htmlcov --cov-report xml:coverage.xml --cov-report term"
python_files = [
   "test*.py"
]
norecursedirs = [
   ".git", ".tox", "venv*", "requirements*", "build",
]
log_cli = true
log_cli_level = "1"
filterwarnings = [
   "ignore::UserWarning"
]
markers = [
   "slow",
   "serial",
   "conf: Inject flask config values into the app fixture",
   "integration: HTTP-level tests with real gcp-queue parsing (see tests/integration/)",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "**/batch_permit_validator/utils.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
