[tool.poetry]
name = "strr-pay"
version = "0.4.0"
description = "BC Registries  - strr-payment-processor"
authors = []
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12.2,<3.15"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.4"
launchdarkly-server-sdk = "^9.0.1"
python-dotenv = "^1.0.1"
flask-babel = "^4.0.0"
psycopg2 = "^2.9.9"
flask-jwt-oidc = "^0.8.0"
gunicorn = "^21.2.0"
flask-cors = "^4.0.0"
pg8000 = "^1.31.2"
protobuf = "^5.29.0"
gcp-queue = { git = "https://github.com/bcgov/sbc-connect-common.git", subdirectory = "python/gcp-queue", branch = "main" }
structured-logging = { git = "https://github.com/bcgov/sbc-connect-common.git", subdirectory = "python/structured-logging", branch = "main" }
strr-api = {git = "https://github.com/bcgov/STRR.git", rev = "main", subdirectory = "strr-api"}
nanoid = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^7.1.0"
pytest-mock = "^3.14.0"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.4"
pylint = "^3.0.3"
strr-test-utils = {path = "../../tests/python-test-utils", develop = true}

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "google"
line_length = 100
known_first_party = ["strr_pay"]

# Flake8 does not read [tool.flake8] natively; Flake8-pyproject registers a plugin so this is honored.
[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503", "I100", "I201"]
# I100/I201: import layout is enforced by `isort --check` in fmt-check; flake8-isort can disagree.

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]
addopts = "--verbose --strict -p no:warnings --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore::UserWarning",
]
markers = [
    "integration: Docker Postgres, migrations, and strr_test_utils DB fixtures",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "**/strr_pay/config.py",
    "**/strr_pay/__init__.py",
]

[tool.coverage.report]
fail_under = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
